[package]
name = "fc-blackbox"
version = "0.2.0"
authors = ["Ilya Epifanov <elijah.epifanov@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Parser for flight controllers' balckbox logs"
repository = "https://github.com/ilya-epifanov/fc-blackbox"
include = ["/src", "!/src/test-data"]

[dependencies]
num-traits = "0.2"
nom = { version = "7", features = ["alloc"] }
itertools = "0.10"
integer-encoding = "3"
chrono = "0.4"
num-rational = "0.4"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
insta = { version = "1.19", features = ["glob", "yaml"] }
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.4"
